--- a/vscode.settings.json
+++ b/vscode.settings.json
@@ -4,6 +4,7 @@
     "editor.lineHeight": 23,
     "editor.tabSize": 2,
     "editor.fontFamily": "Operator Mono Lig",
+    "editor.renderWhitespace": "all",
     "editor.fontLigatures": true,
     "elm-format.formatOnSave": true,
     "editor.minimap.enabled": false,
@@ -14,5 +15,7 @@
     "editor.snippetSuggestions": "top",
     "editor.formatOnPaste": true,
     "workbench.colorTheme": "Ayu Mirage",
-    "editor.glyphMargin": false
+    "editor.glyphMargin": false,
+    "git.autofetch": true,
+    "git.defaultCloneDirectory": "~/code",
 }
