--- a/.tmux.conf
+++ b/.tmux.conf
@@ -66,16 +66,16 @@ bind r       \
 setw -g mode-keys vi
 
 # setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # update default binding of 'Enter' to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# unbind -t vi-copy Enter
+# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Map U/D to be page up/down
-bind-key -t vi-copy d page-down
-bind-key -t vi-copy u page-up
+# bind-key -t vi-copy d page-down
+# bind-key -t vi-copy u page-up
 
 #bind y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
 #bind C-y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
