cleans up configs

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -54,3 +54,11 @@ bind-key -n M-Down resize-pane -D 5
 
 # Reload configuration
 bind-key r source-file ~/.tmux.conf \; display-message "CONFIG RELOADED"
+
+# Colors
+set -g default-terminal "screen-256color"
+
+set -g status-bg blue
+set -g status-fg white
+
+set -g pane-active-border-fg blue
