adds active tab color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,3 +62,6 @@ set -g status-bg blue
 set -g status-fg white
 
 set -g pane-active-border-fg blue
+
+set-window-option -g window-status-current-bg white
+set-window-option -g window-status-current-fg blue
