--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,8 +34,8 @@ bind-key , previous-window
 # Next window ( think ">" )
 bind-key . next-window
 
-# "Tag" (name) window
-bind-key t command-prompt -I "#W" "rename-window '%%'"
+# "Tag" (name) window (takes over big clock)
+# bind-key t command-prompt -I "#W" "rename-window '%%'"
 
 # List windows
 bind-key l choose-tree -w
@@ -58,10 +58,15 @@ bind-key r source-file ~/.tmux.conf \; display-message "CONFIG RELOADED"
 # Colors
 set -g default-terminal "screen-256color"
 
-set -g status-bg blue
+set -g status-bg black
 set -g status-fg white
 
 set -g pane-active-border-fg blue
 
-set-window-option -g window-status-current-bg white
-set-window-option -g window-status-current-fg blue
+set-window-option -g window-status-current-bg blue
+set-window-option -g window-status-current-fg black
+
+set-option -g renumber-windows on
+
+# mousy mode!
+set -g mouse-select-pane on
