--- a/.tmux.conf
+++ b/.tmux.conf
@@ -69,4 +69,4 @@ set-window-option -g window-status-current-fg black
 set-option -g renumber-windows on
 
 # mousy mode!
-set -g mouse-select-pane on
+set -g mouse on
