--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,7 +35,7 @@ bind-key , previous-window
 bind-key . next-window
 
 # "Tag" (name) window (takes over big clock)
-# bind-key t command-prompt -I "#W" "rename-window '%%'"
+bind-key t command-prompt -I "#W" "rename-window '%%'"
 
 # List windows
 bind-key l choose-tree -w
@@ -58,15 +58,17 @@ bind-key r source-file ~/.tmux.conf \; display-message "CONFIG RELOADED"
 # Colors
 set -g default-terminal "screen-256color"
 
-set -g status-bg black
-set -g status-fg white
+set -g status-style bg=black,fg=white
 
-set -g pane-active-border-fg blue
+set -g pane-active-border-style fg=blue
 
-set-window-option -g window-status-current-bg blue
-set-window-option -g window-status-current-fg black
+set-window-option -g window-status-current-style bg=blue,fg=black
 
 set-option -g renumber-windows on
 
 # mousy mode!
 set -g mouse on
+
+# Turn off auto rename!
+set-window-option -g automatic-rename off
+set-option -g allow-rename off 
