Fix formating, add new functions

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -72,3 +72,15 @@ set -g mouse on
 # Turn off auto rename!
 set-window-option -g automatic-rename off
 set-option -g allow-rename off 
+
+
+### Status bar ###
+
+# Prevent session name truncation
+set -g status-left-length 32
+
+# Timestamp
+set -g status-right '#[fg=colour233,bg=yellow,bold] %Y-%m-%d #[fg=colour233,bg=red,bold] %H:%M:%S '
+
+# Refresh every second
+set -g status-interval 1
