clean up tmux status bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,7 +26,7 @@ bind-key 0 switch-client -n
 bind-key T command-prompt -I "#S" "rename-session '%%'"
 
 # New window
-bind-key n new-window
+bind-key n new-window -c "#{pane_current_path}"
 
 # Previous window ( think "<" )
 bind-key , previous-window
@@ -41,10 +41,10 @@ bind-key t command-prompt -I "#W" "rename-window '%%'"
 bind-key l choose-tree -w
 
 # Vertical window split
-bind-key v split-window -h
+bind-key v split-window -h -c "#{pane_current_path}"
 
 # Horizontal window split
-bind-key h split-window
+bind-key h split-window -c "#{pane_current_path}"
 
 # Resize panes using Alt-arrow without prefix
 bind-key -n M-Left resize-pane -L 5
@@ -53,16 +53,17 @@ bind-key -n M-Up resize-pane -U 5
 bind-key -n M-Down resize-pane -D 5
 
 # Reload configuration
-bind-key r source-file ~/.tmux.conf \; display-message "CONFIG RELOADED"
+bind-key r source-file ~/.tmux.conf \; display-message "config reloaded"
 
-# Colors
-set -g default-terminal "screen-256color"
-
-set -g status-style bg=black,fg=white
+set -g status-style bg=black,fg=black,bright
 
 set -g pane-active-border-style fg=blue
 
-set-window-option -g window-status-current-style bg=blue,fg=black
+set-window-option -g window-status-current-style bg=black,fg=cyan
+
+# Timestamp
+set -g status-right '#[fg=black,bright,bg=black,] %A, %b %d #[fg=white,bright,bg=black,] %I:%M %p '
+
 
 set-option -g renumber-windows on
 
@@ -79,8 +80,11 @@ set-option -g allow-rename off
 # Prevent session name truncation
 set -g status-left-length 32
 
-# Timestamp
-set -g status-right '#[fg=colour233,bg=yellow,bold] %Y-%m-%d #[fg=colour233,bg=red,bold] %H:%M:%S '
-
 # Refresh every second
-set -g status-interval 1
+set -g status-interval 4
+
+# Ensure zsh is used
+set -g default-shell /bin/zsh
+
+set -g default-terminal "screen-256color"
+
