use red pane border

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -54,7 +54,7 @@ bind-key r source-file ~/.tmux.conf \; display-message "config reloaded"
 
 set -g status-style bg=black,fg=black,bright
 
-set -g pane-active-border-style fg=blue
+set -g pane-active-border-style fg=red
 
 set-window-option -g window-status-current-style bg=black,fg=cyan
 
