set esc time to 0

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -80,8 +80,11 @@ set -g status-left-length 32
 # Refresh every second
 set -g status-interval 4
 
+set -s escape-time 0
+
 # Ensure zsh is used
 set -g default-shell /bin/zsh
 
 set -g default-terminal "screen-256color"
+
 
