Update vimrc, tmux conf, remove old go files

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,10 +38,10 @@ bind-key . next-window
 bind-key t command-prompt -I "#W" "rename-window '%%'"
 
 # Vertical window split
-bind-key v split-window -h -c "#{pane_current_path}"
+bind-key \\ split-window -h -c "#{pane_current_path}"
 
 # Horizontal window split
-bind-key h split-window -c "#{pane_current_path}"
+bind-key - split-window -c "#{pane_current_path}"
 
 # Resize panes using Alt-arrow without prefix
 bind-key -n M-Left resize-pane -L 5
@@ -88,3 +88,7 @@ set -g default-shell /bin/zsh
 set -g default-terminal "screen-256color"
 
 
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
