--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,14 +52,14 @@ bind-key -n M-Down resize-pane -D 5
 # Reload configuration
 bind-key r source-file ~/.tmux.conf \; display-message "config reloaded"
 
-set -g status-style bg=black,fg=black,bright
+set -g status-style fg=white
 
 set -g pane-active-border-style fg=red
 
-set-window-option -g window-status-current-style bg=black,fg=cyan
+set-window-option -g window-status-current-style fg=red
 
 # Timestamp
-set -g status-right '#[fg=black,bright,bg=black,] %A, %b %d #[fg=white,bright,bg=black,] %I:%M %p '
+set -g status-right '#[fg=white] %a, %b %d #[fg=white] %I:%M %p '
 
 
 set-option -g renumber-windows on
@@ -86,7 +86,6 @@ set -s escape-time 0
 set -g default-shell /bin/zsh
 
 set -g default-terminal "screen-256color"
-
 
 bind h select-pane -L
 bind j select-pane -D
