--- a/.tmux.conf
+++ b/.tmux.conf
@@ -91,3 +91,8 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'junegunn/tmux-fzf-url'
+run -b '~/.tmux/plugins/tpm/tpm'
+
