--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,11 +1,4 @@
-# Useful defaults:
-#
-# bind-key    -T prefix       ?                 list-keys
-# bind-key    -T prefix       z                 resize-pane -Z
-# bind-key -r -T prefix       Up                select-pane -U
-# bind-key -r -T prefix       Down              select-pane -D
-# bind-key -r -T prefix       Left              select-pane -L
-# bind-key -r -T prefix       Right             select-pane -R
+source-file ~/.tmux/reset
 
 # Set prefix to Ctrl-a
 set-option -g prefix C-a
@@ -61,7 +54,7 @@ set-window-option -g window-status-current-style fg=red
 # Timestamp
 set -g status-right '#[fg=white] %a, %b %d #[fg=white] %I:%M %p '
 
-
+# When closing a window we auto renumber
 set-option -g renumber-windows on
 
 # mousy mode!
@@ -94,5 +87,6 @@ bind l select-pane -R
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'junegunn/tmux-fzf-url'
+set -g @plugin 'hallazzang/tmux-reset'
 run -b '~/.tmux/plugins/tpm/tpm'
 
