--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,3 @@
-source-file ~/.tmux/reset
-
 # Set prefix to Ctrl-a
 set-option -g prefix C-a
 
@@ -47,12 +45,12 @@ bind-key r source-file ~/.tmux.conf \; display-message "config reloaded"
 
 set -g status-style fg=white
 
-set -g pane-active-border-style fg=red
+set -g pane-active-border-style fg=blue
 
-set-window-option -g window-status-current-style fg=red
+set-window-option -g window-status-current-style "fg=#000000,bg=#FFFFFF"
 
 # Timestamp
-set -g status-right '#[fg=white] %a, %b %d #[fg=white] %I:%M %p '
+# set -g status-right '#[fg=white] %a, %b %d #[fg=white] %I:%M %p '
 
 # When closing a window we auto renumber
 set-option -g renumber-windows on
@@ -63,7 +61,6 @@ set -g mouse on
 # Turn off auto rename!
 set-window-option -g automatic-rename off
 set-option -g allow-rename off 
-
 
 ### Status bar ###
 
@@ -84,9 +81,4 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'junegunn/tmux-fzf-url'
-set -g @plugin 'hallazzang/tmux-reset'
-run -b '~/.tmux/plugins/tpm/tpm'
 
