--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,34 +7,36 @@ bind-key a send-prefix
 # Begin numbering at 1
 set -g base-index 1
 
-# Previous session ( think "(" )
+# Previous session with (
 bind-key 9 switch-client -p
 
-# Next session ( think ")" )
+# Next session with )
 bind-key 0 switch-client -n
 
-# "Tag" (name) session
+# Tag a session with T
 bind-key T command-prompt -I "#S" "rename-session '%%'"
 
-# New window
+# New window with n
 bind-key n new-window -c "#{pane_current_path}"
 
-# Previous window ( think "<" )
+# Previous window with <
 bind-key , previous-window
 
-# Next window ( think ">" )
+# Next window >
 bind-key . next-window
 
-# "Tag" (name) window (takes over big clock)
+# Tag a window with t
 bind-key t command-prompt -I "#W" "rename-window '%%'"
 
-# Vertical window split
+# Vertical window split with |
+bind-key \\ split-window -h -c "#{pane_current_path}"
 bind-key \\ split-window -h -c "#{pane_current_path}"
 
-# Horizontal window split
+# Horizontal window split with -
+bind-key - split-window -c "#{pane_current_path}"
 bind-key - split-window -c "#{pane_current_path}"
 
-# Resize panes using Alt-arrow without prefix
+# Resize panes sans-prex with Alt-arrow
 bind-key -n M-Left resize-pane -L 5
 bind-key -n M-Right resize-pane -R 5
 bind-key -n M-Up resize-pane -U 5
@@ -42,15 +44,6 @@ bind-key -n M-Down resize-pane -D 5
 
 # Reload configuration
 bind-key r source-file ~/.tmux.conf \; display-message "config reloaded"
-
-set -g status-style fg=white
-
-set -g pane-active-border-style fg=blue
-
-set-window-option -g window-status-current-style "fg=#000000,bg=#FFFFFF"
-
-# Timestamp
-# set -g status-right '#[fg=white] %a, %b %d #[fg=white] %I:%M %p '
 
 # When closing a window we auto renumber
 set-option -g renumber-windows on
@@ -60,25 +53,32 @@ set -g mouse on
 
 # Turn off auto rename!
 set-window-option -g automatic-rename off
-set-option -g allow-rename off 
+set-option -g allow-rename off
 
-### Status bar ###
+### Status bar
+
+# Colors
+set -g status-style fg=gray
+set -g pane-active-border-style fg=blue
+set-window-option -g window-status-current-style "fg=black,bg=blue"
+
+# Timestamp
+set -g status-right '#[fg=gray] %a, %b %d #[fg=gray] %I:%M %p '
 
 # Prevent session name truncation
 set -g status-left-length 32
 
 # Refresh every second
 set -g status-interval 4
-
 set -s escape-time 0
 
 # Ensure zsh is used
 set -g default-shell /bin/zsh
 
-set -g default-terminal "screen-256color"
-
+# Modal pane selection
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+set-option default-terminal "tmux-256color"
